corrigindo a exportacao de dados do escritorio virtual